2007-04-29  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp:
	* src/wxterminal/wxt_gui.h:
	Add a returned boolean to wxt_exec_event, to simplify callers.

2007-04-27  Ethan Merritt  <merritt@u.washington.edu>

	* src/tabulate.c src/tabulate.h src/Makefile.am:  Consolidate the code
	supporting "set table <foo>" into a new source file.
	Add support for tabular output of style LABELPOINTS in 2D and 3D.
	Add support for tabular output of style VECTOR in 2D and 3D.

	* src/plot2d.c (print_table) src/plot3d.c (print_3dtable):
	Moved these routines into new file tabulate.c.

2006-04-27  Harald Harders  <h.harders@tu-bs.de>

	* src/tabulate.c:  For tabular output "set table <foo>", give plot
	titles in a comment record.

2007-04-25  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (do_3dplot): Correct Z coordinate of xyplane for log
	scale on Z.  Bug #1703370.

	* src/specfunc.c: Restore lost prototype for inverse_normal_func()

2007-04-25  James R. Van Zandt  <jrv@vanzandt.comcast.net>

	* src/specfun.c (f_normal): call erfc instead of erf, to avoid
	underflow for -38 < arg < -8.

2007-04-24  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm (X11_text):  term_reset() tries to close down all files
	and pipes cleanly. But if called on exit, the pipe to gnuplot_x11 may
	already be closed. Don't try to write to it.  Bug #1706945.

2007-04-19  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Fix unterminated quote that causes emacs/makeinfo
	to fail.

2007-04-17  Ethan Merritt  <merritt@u.washington.edu>

	* configure.in: Fix spelling of BACKWARDS_COMPATIBLE yet again.

2007-04-17  Ethan Merritt  <merritt@u.washington.edu>

	* term/post.trm: Change the default to "blacktext" for the TeX-based
	terminal variants (pstex pslatex epslatex). This is more in line with
	the behaviour in versions 4.0 and earlier.  In particular it means that
	the default settings do not require you to include the color.sty
	package.
